[package]
name = "lavachallenge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
bip39 = "2.0.0"
bitcoincore-rpc = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
regex = "1.9.5"
uuid = { version = "1.4.1", features = ["v4"] }
log = "0.4.20"
env_logger = "0.10.0"
base58 = "0.2.0"
tiny-bip39 = "1.0.0"
rand = "0.8.5"
anyhow = "1.0.75"
thiserror = "1.0.48"
hex = "0.4.3"
chrono = "0.4.23"
rusqlite = { version = "0.29.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
